area/apps/konfig/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konfig
  namespace: konfig
spec:
  selector:
    matchLabels:
      app: konfig
  replicas: 3
  template:
    metadata:
      labels:
        app: konfig
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 3000
        fsGroup: 2000
      volumes:
        - name: konfig-volume
          configMap:
            name: konfig-config
      containers:
        - name: konfig
          image: docker.io/alexfalkowski/konfig:v1.122.0
          imagePullPolicy: Always
          args: ["server"]
          volumeMounts:
            - name: konfig-volume
              mountPath: /etc/konfig/server.yaml
              subPath: server.yaml
          ports:
            - containerPort: 8080
            - containerPort: 9090
          livenessProbe:
            httpGet:
              path: /livez
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            requests:
              cpu: 125m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: konfig
  namespace: konfig
  labels:
    app: konfig
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: grpc
    port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app: konfig
  type: ClusterIP
