area/apps/konfig/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: konfig-np
  namespace: konfig
spec:
  podSelector:
    matchLabels:
      app: konfig
  ingress:
    - {}
  egress:
    - {}
